RESOLVED FIXED154042
Spread expressions are not fair game for direct binding
https://bugs.webkit.org/show_bug.cgi?id=154042
Summary Spread expressions are not fair game for direct binding
Filip Pizlo
Reported 2016-02-09 11:48:21 PST
We currently crash on this: var [x] = [...y]; Because NodesCodegen thinks that this is a direct binding. It's not, because we cannot directly generate bytecode for "...y". This is a unique property of spread expressions, so its sufficient to just bail out of direct binding if we see a spread expression.
Attachments
the patch (3.30 KB, patch)
2016-02-09 11:55 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-02-09 11:55:28 PST
Created attachment 270942 [details] the patch
Filip Pizlo
Comment 2 2016-02-09 12:18:49 PST
degasih26
Comment 3 2024-12-27 03:35:21 PST
Immerse yourself in the ultimate gaming experience with the growing popularity of online mobile games in Australia. Over the past decade, the landscape of entertainment has dramatically shifted as smartphones and mobile apps have become essential parts of everyday life. Check and you https://richard.casinoaustralialogin.com/. Australians, known for their love of technology and gaming, have fully embraced this trend, fueling the development of online mobile gaming to unprecedented heights.
Note You need to log in before you can comment on or make changes to this bug.